(lang dune 3.19)

(name AoC2k25)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Mateusz Kapusta <mr.kapusta@student.uw.edu.pl>")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name AoC2k25)
 (synopsis "Advent of Code 2025 writen in Ocaml")
 (description "Learning Ocaml while doing advent of code")
 (depends ocaml))
